--- a/index.html
+++ b/index.html
@@ -3,3 +3,26 @@
 <p>Bursa Uludağ Üniversitesinde yönetim bilişim sistemleri 2. sınıf öğrencisiyim. Yazılım dillerinde kendimi geliştirmeye çalışıyorum.</p>
 <h3>Hobiler</h3>
 <p>Hobilerim çizim yapmak, yürüyüş yapmak, polisiye ve seri katil dizileri izlemek, farklı yerler gezip görmek.</p>
+<ol>
+    
+     <li>Dizi</li>
+   <ul>
+    Dexter
+    <br>
+    Breaking Bad
+    <br>
+    Behzat Ç
+    </ul>
+    <li>Film</li>        
+       <ul>
+            Uyumsuzlar
+            <br>
+            Yüzüklerin Efendisi
+
+        </ul>
+    </li>
+</li>
+</ol>
+<h3>En Sevdiğim Dizi</h3>
+<img src="c:\Users\Admin\Downloads\dexter-bj.jpg" height="300" alt="Dizi Fotoğrafı">
+<p>Miami'de yaşanan cinayetleri araştıran bir 'kan' inceleme uzmanı. Düzenin adaletini kişisel bakışa göre sağlamak hayatta kalma amacı.Sadece katilleri ve zanlıları öldüren bir seri katil.</p>
